--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<br><br><br>
 		<h2>Ilan Naibryf</h2>
 		<div class="body">
-				<p style="text-align:justify;">I'm a sophomore at <a href="https://www.uchicago.edu/" id="uchicago">The University of Chicago</a> studying physics and computer science.
+				<p style="text-align:justify;">I'm a sophomore at <a href="https://www.uchicago.edu/" id="uchicago">The University of Chicago</a> studying Physics and Molecular Engineering.
 
 
 				<br><br>
