--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta property="og:image" content="https://ianlunn.github.io/Hover/hover.jpg" />
 		<meta property="og:site_name" content="Hover.css"/>
 		<meta property="og:title" content="Hover.css - A collection of CSS3 powered hover effects" />
-		<title>Hover.css - A collection of CSS3 powered hover effects</title>
+		<title>Ilan Naibryf</title>
 		<link href="css/demo-page.css" rel="stylesheet" media="all">
 		<link href="css/hover.css" rel="stylesheet" media="all">
 		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" media="all">
@@ -19,7 +19,7 @@
 		<br><br><br>
 		<h2>Ilan Naibryf</h2>
 		<div class="body">
-				<p style="text-align:justify;">I'm a sophomore at <a href="https://www.uchicago.edu/" id="uchicago">The University of Chicago</a> studying Physics and Molecular Engineering.
+				<p style="text-align:justify;">I'm a 3rd year at <a href="https://www.uchicago.edu/" id="uchicago">The University of Chicago</a> studying Physics and Molecular Engineering.
 
 
 				<br><br>
