--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<br><br><br>
 		<h2>Ilan Naibryf</h2>
 		<div class="body">
-				<p style="text-align:justify;">I'm a 3rd year at <a href="https://www.uchicago.edu/" id="uchicago">The University of Chicago</a> studying Physics and Molecular Engineering.
+				<p style="text-align:justify;">I'm a 4th year at <a href="https://www.uchicago.edu/" id="uchicago">The University of Chicago</a> studying Physics and Molecular Engineering.
 
 
 				<br><br>
@@ -29,6 +29,7 @@
 
 
 				<ul>
+					<li><a href="https://www.stixfinancial.com/signup" id="red">STIX Financial</a></li>
 					<li><a href="https://www.youtube.com/watch?v=AP6q31pVS70" id="rosa">MRE Passive Driver (non-invasive tumor detector)</a></li>
 					<li><a href="https://www.hpa.edu/student-life/storytelling/student-led-research/science-research/ilan-naibryf" id="verde">robotic prosthetic hand</a></li>
 
