--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 
 				<ul>
-					<li><a href="https://www.stixfinancial.com/signup" id="red">STIX Financial</a></li>
+					<li><a href="https://www.stixfinancial.com/signup" id="verde">STIX Financial</a></li>
 					<li><a href="https://www.youtube.com/watch?v=AP6q31pVS70" id="rosa">MRE Passive Driver (non-invasive tumor detector)</a></li>
 					<li><a href="https://www.hpa.edu/student-life/storytelling/student-led-research/science-research/ilan-naibryf" id="verde">robotic prosthetic hand</a></li>
 
